Auto stash before checking out "HEAD"

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <script src="doodle.js"></script>
     <link rel="stylesheet" href="style.css"></link>
     <title>Doodle Jump</title>
   </head>
   <body>
+    <div>
+      <h1>Doodle Jump!</h1>
+    </div>
 
     <div class="grid">
 
